--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,12 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+    compile group: 'org.springframework', name: 'spring-tx', version: '3.0.5.RELEASE'
+    implementation 'org.hibernate:hibernate-core:5.4.3.Final'
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-
-    compileOnly 'org.projectlombok:lombok:1.18.10'
-    annotationProcessor 'org.projectlombok:lombok:1.18.10'
-
-
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile("org.assertj:assertj-core:3.11.1")
 }
-
