Удаление лишних зависимостей в build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile group: 'org.springframework', name: 'spring-tx', version: '5.2.2.RELEASE'
+    // compile group: 'org.springframework', name: 'spring-tx', version: '5.2.2.RELEASE'
     implementation 'org.hibernate:hibernate-core:5.4.3.Final'
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
@@ -42,10 +42,4 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile("org.assertj:assertj-core:3.11.1")
-    compile("org.springframework.boot:spring-boot-starter-data-rest")
-    compile("com.h2database:h2")
-    annotationProcessor 'org.projectlombok:lombok:1.18.10'
-    compileOnly 'org.projectlombok:lombok:1.18.10'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
 }
