--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,6 @@ configurations {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -34,6 +33,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+    compile 'mysql:mysql-connector-java:8.0.17'
     compile group: 'org.springframework', name: 'spring-tx', version: '5.2.2.RELEASE'
     implementation 'org.hibernate:hibernate-core:5.4.3.Final'
     compile("org.springframework.boot:spring-boot-starter-web")
