--- a/build.gradle
+++ b/build.gradle
@@ -42,4 +42,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile("org.assertj:assertj-core:3.11.1")
+//                              Security
+//    ----------------------------------------------------------------------
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-test'
+//    ----------------------------------------------------------------------
 }
