Connect hibernate and mysql

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,10 @@ spring:
   thymeleaf:
     prefix: file:src/main/resources/templates/
     cache: false
+  jpa:
+    hibernate:
+      ddl-auto: create
+  datasource:
+    url: jdbc:mysql://localhost/noSkype
+    username: root
+    password: sport1337
