--- a/build.gradle
+++ b/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-test'
 //    ----------------------------------------------------------------------
+    compile("org.springframework.boot:spring-boot-devtools")
 }
