Add thymeleaf-spring-security-5, and add href get_users in navbar, just for ADMIN role"

--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,8 @@ dependencies {
 //    ----------------------------------------------------------------------
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-test'
-    compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity4', version: '2.1.2.RELEASE'
+    compile("org.thymeleaf.extras:thymeleaf-extras-springsecurity5")
+
 //    ----------------------------------------------------------------------
     compile("org.springframework.boot:spring-boot-devtools")
 }
