--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: java
+
 install: gradle
+
+before_install:
+    - sudo apt-get update
+
 script:
-- gradle build && gradle bootRun
+    - gradle build && gradle bootRun
+
+dist: xenial
