--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_install:
   - sudo apt-get update
 
 script:
-  - mysql --user="root" --execute="CREATE SCHEMA IF NOT EXISTS noSkypeTest;"
-  - mysql -u root noSkypeTest <
+  - sudo mysql --user="root" --execute="CREATE SCHEMA IF NOT EXISTS noSkypeTest;"
+  - sudo mysql -u root noSkypeTest <
   - gradle build && gradle bootRun
 
 
