Add install mysql-server

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install: gradle
 
 before_install:
   - sudo apt-get update
+  - sudo apt-get install mysql-server
 
 script:
   - sudo mysql --user="root" --execute="CREATE SCHEMA IF NOT EXISTS noSkypeTest;"
