--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+services:
+    - mysql
 language: java
 dist: xenial
 
@@ -7,9 +9,8 @@ before_install:
   - sudo apt-get update
 
 script:
-  - sudo apt-get install mysql-server
-  - sudo mysql --user="root" --execute="CREATE SCHEMA IF NOT EXISTS noSkypeTest;"
-  - sudo mysql -u root noSkypeTest <
+  - mysql --user="root" --execute="CREATE SCHEMA IF NOT EXISTS noSkypeTest;"
+  - mysql -u root noSkypeTest <
   - gradle build && gradle bootRun
 
 
