--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ dist: xenial
 install: gradle
 
 before_install:
-  - sudo apt-get updateб
+  - sudo apt-get update
 
 script:
   - mysql --user="root" --execute="CREATE SCHEMA IF NOT EXISTS noSkypeTest;"
