--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ before_install:
   - sudo apt-get update
 
 script:
-  - mysql --user = "root" --execute="CREATE DATABASE IF NOT EXISTS noSkypeTest;"
-    - mysql --user = "root" --execute="update user set authentication_string=PASSWORD('sport1337') where user='root' and host='localhost';"
+  - mysql --user="root" --execute="CREATE SCHEMA IF NOT EXISTS noSkypeTest;"
   - gradle build && gradle bootRun
 
 
