Rename application-test on application.yml, turn off tests with  gradle build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ before_install:
   - sudo apt-get update
 
 script:
-  - gradle test
-  - gradle build && gradle bootRun
+  - gradle build -x test && gradle bootJar && gradle bootRun
 
 
