BootJar in travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ before_install:
     - sudo apt-get update
 
 script:
-    - gradle build && gradle bootRun
+    - gradle build && gradle bootJar
 
 dist: xenial
