--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_install:
   - sudo apt-get update
 
 script:
-  - gradle build && gradle bootJar && gradle bootRun
+  - gradle build -x test && gradle bootJar && gradle bootRun
 
 
