--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     //    ----------------------------------------------------------------------
 //                              WEBsocket
 //    ----------------------------------------------------------------------
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.2.2.RELEASE'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.6.3'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.6.2'
 
 }
