Add sonar, correct gradle in travis, add const var of url registration

--- a/build.gradle
+++ b/build.gradle
@@ -4,19 +4,12 @@ plugins {
     id 'java'
     id 'idea'
     id "org.sonarqube" version "3.3"
+    id 'jacoco'
 }
 
 group = 'ru.noSkype'
 version = '0.1.0'
 sourceCompatibility = '11'
-
-//// Конфигурация для devtools dependency
-//configurations {
-//    developmentOnly
-//    runtimeClasspath {
-//        extendsFrom developmentOnly
-//    }
-//}
 
 bootJar {
     baseName = 'spring-rest-service'
@@ -30,7 +23,6 @@ repositories {
 dependencies {
     implementation 'junit:junit:4.13.1'
     compile("org.springframework.boot:spring-boot-starter-web") {
-        // Исключаем зависимсость
         exclude module: "spring-boot-starter-loggin"
     }
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
@@ -38,29 +30,31 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile("org.assertj:assertj-core:3.11.1")
-//                              Loggin
-//    ----------------------------------------------------------------------
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
-//    ----------------------------------------------------------------------
-//                          DataBase support
-//    ----------------------------------------------------------------------
+
     compile 'mysql:mysql-connector-java:8.0.17'
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
-//    ----------------------------------------------------------------------
-//                              Security
-//    ----------------------------------------------------------------------
+
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-test'
     compile("org.thymeleaf.extras:thymeleaf-extras-springsecurity5")
 
-//    ----------------------------------------------------------------------
-//    compile("org.springframework.boot:spring-boot-devtools")
-    //    ----------------------------------------------------------------------
-//                              WEBsocket
-//    ----------------------------------------------------------------------
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.6.3'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.6.2'
+}
 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
+
+test {
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
 }
 
 tasks.named('test') {
