--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ services:
 
 language: java
 
-install: gradle
+#install: gradle
 
 before_install:
   - sudo apt-get update
 
 script:
-    - gradle build && gradle bootJar && gradle bootRun
+    - ./gradlew build && ./gradlew bootJar && ./gradlew bootRun
 
 
