--- a/build.gradle
+++ b/build.gradle
@@ -21,26 +21,27 @@ repositories {
 }
 
 dependencies {
-    implementation 'junit:junit:4.13.1'
-    compile("org.springframework.boot:spring-boot-starter-web") {
+    implementation("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-loggin"
     }
-    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile("org.assertj:assertj-core:3.11.1")
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
 
-    compile 'mysql:mysql-connector-java:8.0.17'
-    compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation 'mysql:mysql-connector-java:8.0.17'
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-test'
-    compile("org.thymeleaf.extras:thymeleaf-extras-springsecurity5")
+    implementation("org.thymeleaf.extras:thymeleaf-extras-springsecurity5")
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.6.3'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.6.2'
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation("org.assertj:assertj-core:3.11.1")
+    testImplementation 'junit:junit:4.13.1'
 }
 
 jacocoTestReport {
