--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -10,4 +10,4 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/noSkypeTest
     username: root
-    password: helloworld
+    password:
