--- a/build.gradle
+++ b/build.gradle
@@ -30,17 +30,17 @@ dependencies {
     implementation group: 'log4j', name: 'log4j', version: '1.2.17'
 
     implementation 'mysql:mysql-connector-java:8.0.17'
-    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-test'
-    implementation("org.thymeleaf.extras:thymeleaf-extras-springsecurity5")
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.6.3'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.6.2'
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    testImplementation("org.assertj:assertj-core:3.11.1")
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.assertj:assertj-core:3.11.1'
     testImplementation 'junit:junit:4.13.1'
 }
 
@@ -58,6 +58,3 @@ jacocoTestReport {
     dependsOn test // tests are required to run before generating the report
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
