--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ language: java
 
 before_install:
   - sudo apt-get update
+  - mysql -e 'CREATE DATABASE noSkypeTest;'
 
 script:
     - ./gradlew build && ./gradlew bootJar
